force-app/main/default/objects/Project__c/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <formula>IF(ISBLANK(Account__r.Phone),&apos;&apos;,&quot;(&quot; &amp; LEFT(Account__r.Phone, 3) &amp; &quot;) &quot; &amp; LEFT(RIGHT(Account__r.Phone, 7), 3) &amp; &quot;-&quot; &amp; RIGHT(Account__r.Phone, 4))</formula>
    <label>Account Phone</label>
    <type>Text</type>
</CustomField>