force-app/main/default/objects/Project__c/fields/Internal_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Project_Number__c</fullName>
    <displayFormat>P-{00000000}</displayFormat>
    <label>Internal Project Number</label>
    <type>AutoNumber</type>
</CustomField>