force-app/main/default/objects/Project__c/fields/Intranet_Project_Website__c.field-meta.xml
<CustomField>
    <fullName>Intranet_Project_Website__c</fullName>
    <label>Intranet Project Website</label>
    <type>Url</type>
</CustomField>