force-app/main/default/objects/Project__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <description>These shows the current phase of the Project.</description>
    <inlineHelpText>These shows the current phase of the Project.</inlineHelpText>
    <label>Project Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requirements</fullName>
                <default>true</default>
                <label>Requirements</label>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>