force-app/main/default/objects/Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>Specify the start date of the project.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>