force-app/main/default/objects/Project__c/recordTypes/Installation_Project.recordType-meta.xml
<RecordType>
    <fullName>Installation_Project</fullName>
    <active>true</active>
    <label>Installation Project</label>
</RecordType>