force-app/main/default/objects/Project__c/recordTypes/Software_Development_Project.recordType-meta.xml
<RecordType>
    <fullName>Software_Development_Project</fullName>
    <active>true</active>
    <label>Software Development Project</label>
</RecordType>