force-app/main/default/objects/Project__c/validationRules/Maximium_Percentage_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximium_Percentage_Value</fullName>
    <active>true</active>
    <description>Sets a Maximum value for the percentage complete field on the Project Object.</description>
    <errorConditionFormula>Percentage_Complete__c   &gt;  1.0</errorConditionFormula>
    <errorDisplayField>Percentage_Complete__c</errorDisplayField>
    <errorMessage>Enter a value less than or equal to 100</errorMessage>
</ValidationRule>