force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Internal_Project_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Deliverables__c</columns>
    <columns>Percentage_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>